# bseqgen

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/bseqgen/: __init__.py  base.py  m_sequence.py  random_seq.py  utils.py
tests/: test_binary_sequence.py  test_m_sequence.py  test_random_seq.py
