[project]
name = "bseqgen"
version = "0.1.0"
description = "Library for generating binary sequences."
readme = "README.md"
authors = [
    { name = "bloopycode" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
